Mon Feb 28 14:21:15 2000  Catherine Moore  <clm@cygnus.com>

	* config/pa/som.h (MAKE_DECL_ONE_ONLY): Define.
 	(ASM_WEAKEN_LABEL): Define.
 
Mon Feb 28 13:07:19 MET 2000  Jan Hubicka  <jh@suse.cz>

	* expr.c (store_constructor): Do not emit USE.
	* rtl.h (stupid_life_analysis): Remove.

Mon Feb 28 07:03:27 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* function.c (number_blocks): Reset next_block_index based on
	what debugging format is used, not what is defined.
	
	* lcm.c: Minor reformatting throughout.
	(reg_dies, reg_becomes_live): Properly handle multiple hard regs.
	
	* toplev.c (rest_of_compilation): Account for time in
	optimize_mode_switching.

	* jump.c (jump_optimize_1): Don't call delete_barrier_successors
	if only marking labels.

Mon Feb 28 12:53:57 MET 2000  Jan Hubicka  <jh@suse.cz>

	* calls.c (expand_call): Attempt to combine stack adjustments with
	pending stack adjustments.

Mon Feb 28 11:34:43 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* loop.c (reg_in_basic_block_p): Don't abort when falling through
	to the end of the function.

2000-02-27  Mark Mitchell  <mark@codesourcery.com>

	* emit-rtl.c (remove_unncessary_notes): Remove notes for empty
	blocks.
	* final.c (next_block_index): Remove.
	(max_block_depth): Likewise.
	(pending_blocks): Likewise.
	(init_final): Don't initialize them.
	(final_start_function): Don't set next_block_index.  Set up
	BLOCK_NUMBER.
	(final_scan_insn): Use BLOCK_NUMBER, not next_block_index.
	* function.h (number_blocks): New function.
	* function.c (get_block_vector): New function.
	(identify_blocks): Use it.
	(reorder_blocks): Set NOTE_BLOCK.
	(number_blocks): New function.
	* tree.def (BLOCK): Add documentation for TREE_ASM_WRITTEN flag.
	* tree.h (BLOCK_NUMBER): New macro.
	(tree_block): Add block_num field.
	* dbxout.c (next_block_number): Remove.
	(dbxout_init): Don't set it.
	(dbxout_block): Only output blocks that have TREE_ASM_WRITTEN